--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     font-family: PokemonItalic;
     color: #e7a905;
     -webkit-text-stroke: 1.2px #12123e; 
-    font-size: 18px; 
+    font-size: 18px;
 }
 
 .tittle{    
@@ -51,7 +51,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
+}
+#btns-attacks{
+    gap: 1rem;
 }
 .subtitle {
     color: #e7a905;
@@ -66,7 +69,7 @@ body {
 }
 .cards {
     display: flex;
-    gap: 10px;
+    gap: 1rem;
 }
 #btns-attacks {
     display: flex;
@@ -100,36 +103,21 @@ input:checked+label {
     width: 80px;
     height: 70px;
 }
-#btn-select {    
-    border: 1px solid;
-    border-radius: 5px;
-    width: 130px;      
-    padding: 10px;
-    margin-top: 20px;
-    background-color: #e7a905;
-    color: aqua;
-    box-sizing: border-box;
-    color: #263f8f;
-    -webkit-text-stroke: 1px #263f8f;
-    cursor: pointer;      
-}
 button {
     border: 1px solid;
     border-radius: 5px;
-    width: 130px;      
-    padding: 10px;
+    width: 8rem;      
+    padding: 1rem;
     margin-top: 20px;
     background-color: #e7a905;    
     color: aqua;
     box-sizing: border-box;
     color: #263f8f;
-    -webkit-text-stroke: 1px #263f8f;     
+    -webkit-text-stroke: 1px #263f8f;
+    cursor: pointer;     
 }
-input {
+input {    
     display: none;
-}
-.btn-attacks{
-    cursor: pointer;
 }
 #counter-lifes{
     display: flex;
@@ -159,6 +147,12 @@ input {
     background-color: #263f8f;
     -webkit-text-stroke: 1px white; 
     color: white;
+}
+.item-a, .item-b{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .attacks {
     display: grid;
